--- a/03-regression-analysis.Rmd
+++ b/03-regression-analysis.Rmd
@@ -3,6 +3,19 @@
 ### Ordinary Least Squares
 The most fundamental model in statistics or econometric is a OLS linear regression. 
 
+**Hierarchy of OLS Assumptions**
+
+|Identification Data Description | Unbiasedness Consistency | Gauss-Markov(BLUE) Asymptotic Inference (z and Chi-squared) | Classical LM (BUE) Small-sample Inference (t and F)|
+|--- | --- | --- | ---|
+|Variation in X | Variation in X | Variation in X | Variation in X|
+|     | Random Sampling | Random Sampling  | Random Sampling |
+|     | Linearity in Parameters | Linearity in Parameters | Linearity in Parameters|
+|     | Zero Conditional Mean | Zero Conditional Mean | Zero Conditional Mean|
+|     |                | Homoskedasticity | Homoskedasticity|
+|     |           |        | Normality of Errors|
+
+
+
 ### Weighted Least Squares
 
 ## Generalized Least Squares
