--- a/09-bookdown_cheat_sheet.Rmd
+++ b/09-bookdown_cheat_sheet.Rmd
@@ -12,6 +12,9 @@ Here's where I park _little_ *examples* **for myself** about bookdown mechanics 
 The bookdown book: <https://bookdown.org/yihui/bookdown/>  
 
 
+## Math Expresssion/ Syntax
+
+
 ## Heading blah blah
 
 ## About labelling things {#id-example}
