--- a/02-descriptive-stat.Rmd
+++ b/02-descriptive-stat.Rmd
@@ -7,6 +7,21 @@ $E(Y)$ | $\sum_{i=1}^k y_i p_i$ | $\int_{-\infty}^{\infty} f(y) dy$
 $\overline{y}$ | $\frac{1}{n} \sum_{i = 1}^{n} y_i$ | $\frac{1}{n} \sum_{i = 1}^{n} y_i$
 
 
+Momemt | Uncentered | Centered 
+---|---|---
+1st | $E(X)=\mu$| 
+2nd | $E(X^2)$ | $E((X-\mu)^2)$
+3rd | $E(X^3)$ | $E((X-\mu)^3)$
+4th | $E(X^4)$ | $E((X-\mu)^4)$
+
+Mean(X) = $E(X)$  
+
+Var(X) = $E((X-\mu)^2)=\sigma^2$  
+
+Skewness(X) = $E((X-\mu)^3)/\sigma^3$  
+
+Kurtosis(X) = $E((X-\mu)^4)/\sigma^4$  
+
 
 ## Numerical Measures
 
