--- a/04-ANOVA.Rmd
+++ b/04-ANOVA.Rmd
@@ -1,21 +1,145 @@
 # Experimental Design
 ## Analysis of Variance (ANOVA)
-ANOVA is using the same underlying mechanism as linear regression. However, the angle that ANOVA chooses to look at is slight different from the traditional linear regression. It can be more useful in the case with **qualitative variables** and **designed experiments**.\
+ANOVA is using the same underlying mechanism as linear regression. However, the angle that ANOVA chooses to look at is slight different from the traditional linear regression. It can be more useful in the case with **qualitative variables** and **designed experiments**.  
+
 <br>
-Experimental Design\
-- **Factor**: explanatory or predictor variable to be studied in an investigation \
-- **Treatment** (or Factor Level): "value" of a factor applied to the experimental unit \
-- **Experimental Unit**: person, animal, piece of material, etc. that is subjected to treatment(s) and provides a response \
-- **Single Factor Experiment**: one explanatory variable considered \
-- **Multifactor Experiment**: more than one explanatory variable \
-- **Classification Factor**: A factor that is not under the control of the experimenter (observational data) \
-- **Experimental Factor**: assigned by the experimenter\
+Experimental Design  
+
+ * **Factor**: explanatory or predictor variable to be studied in an investigation  
+ * **Treatment** (or Factor Level): "value" of a factor applied to the experimental unit  
+ * **Experimental Unit**: person, animal, piece of material, etc. that is subjected to treatment(s) and provides a response  
+ * **Single Factor Experiment**: one explanatory variable considered  
+ * **Multifactor Experiment**: more than one explanatory variable  
+ * **Classification Factor**: A factor that is not under the control of the experimenter (observational data)  
+ * **Experimental Factor**: assigned by the experimenter  
+ 
 <br>
-Basics of experimental design: \ 
-- Choices that a statistician has to make:\
-    - set of treatments\
-    - set of experimental units\
-    - treatment assignment (selection bias)\
-    - measurement (measurement bias, blind experiments)\
-- Advancements in experimental design:\
-    1. Factorial Experiments: \ consider multiple factors at the same time (interaction)\
+Basics of experimental design:  
+
+ * Choices that a statistician has to make:  
+    + set of treatments  
+    + set of experimental units  
+    + treatment assignment (selection bias)  
+    + measurement (measurement bias, blind experiments)  
+    
+ * Advancements in experimental design:  
+ 
+    1. **Factorial Experiments**:  
+    consider multiple factors at the same time (interaction)  
+
+    2. **Replication**: repetition of experiment  
+        * assess mean squared error  
+        * control over precision of experiment (power)  
+ 
+    3. **Randomization**  
+        * Before R.A. Fisher (1900s), treatments were assigned systematically or subjectively  
+        * randomization: assign treatments to experimental units at random, which averages out systematic effects that cannot be control by the investigator  
+
+    4. **Local control**: Blocking or Stratification  
+        * Reduce experimental errors and increase power by placing restrictions on the randomization of treatments to experimental units.  
+        
+Randomization may also eliminate correlations due to time and space.
+
+### Completely Randomized Design (CRD)
+
+Treatment factor A with $a\ge2$ treatments levels.
+Experimental units are randomly assinged to each treatment. The number of experiemntal units in each group can be  
+
+ * equal (balanced): n
+ * unequal (unbalanced):  $n_i$ for the i-th group (i = 1,...,a).
+ 
+ The total sample size is $N=\sum_{i=1}^{a}n_i$
+ 
+ Possible assignments of units to treatments are $k=\frac{N!}{n_1!n_2!...n_a!}$
+ 
+ Each has probability 1/k of being selected. 
+ Each experimental unit is measured with a response $Y_{ij}$, in which j denotes unit and i denotes treatment.  
+ 
+ Treatment
+ 
+| | 1 | 2 | ... | a |
+|:--|:-:|:-:|:-:|:-:|
+|   |$Y_{11}$|$Y_{21}$|...|$Y_{a1}$|
+|   |$Y_{12}$|...|...|...|
+|   |...|...|...|...|
+|Sample Mean | $\bar{Y_{1.}}$|$\bar{Y_{2.}}$| ... | $\bar{Y_{a.}}$
+| Sample SD | $s_1$| $s_2$| ...| $s_a$|
+
+where $\bar{Y_{i.}}=\frac{1}{n_i}\sum_{j=1}^{n_i}Y_{ij}$ 
+
+$s_i^2=\frac{1}{n_i-1}\sum_{j=1}^{n_i}(Y_{ij}-\bar{Y_i})^2$
+
+And the grand mean is $\bar{Y_{..}}=\frac{1}{N}\sum_{i}\sum_{j}Y_{ij}$
+
+#### Single Factor (One-Way) ANOVA
+
+Partitioning the Variance  
+
+The total variability of the $Y_{ij}$ observation can be measured as the deviation of $Y_{ij}$ around the overall mean $\bar{Y_{..}}$:  $Y_{ij} - \bar{Y_{..}}$  
+
+This can be rewritten as: 
+
+\begin{align*}
+Y_{ij} - \bar{Y_{..}}&=Y_{ij} - \bar{Y_{..}} + \bar{Y_{i.}} - \bar{Y_{i.}} \\
+&= (\bar{Y_{i.}}-\bar{Y_{..}})+(Y_{ij}-\bar{Y_{i.}})
+\end{align*}
+
+where 
+
+ * the first term is the *between* treatment differences (i.e., the deviation of the treatment mean from the overall mean)  
+ * the second term is *within* treatment differences (i.e., the deviation of the observation around its treatment mean)
+
+\begin{align*}
+\sum_{i}\sum_{j}(Y_{ij} - \bar{Y_{..}})^2 &=  \sum_{i}n_i(\bar{Y_{i.}}-\bar{Y_{..}})^2+\sum_{i}\sum_{j}(Y_{ij}-\bar{Y_{i.}})^2 \\
+SSTO &= SSTR + SSE \\
+total~SS &= treatment~SS + error~SS \\
+(N-1)~d.f. &= (a-1)~d.f. + (N - a) ~ d.f.
+\end{align*}
+
+we lose a d.f. for the total corrected SSTO because of the estimation of the mean ($\sum_{i}\sum_{j}(Y_{ij} - \bar{Y_{..}})=0$)  
+And, for the SSTR $\sum_{i}n_i(\bar{Y_{i.}}-\bar{Y_{..}})=0$
+
+Accordingly, $MSTR= \frac{SST}{a-1}$ and $MSR=\frac{SSE}{N-a}$
+
+ANOVA table
+
+Source of Variation | SS | df | MS
+---|:-:|:-:|:-:
+Between Treatments | $\sum_{i}n_i(\bar{Y_{i.}}-\bar{Y_{..}})^2$ | a-1 | SSTR/(a-1)
+Error (within treatments) | $\sum_{i}\sum_{j}(Y_{ij}-\bar{Y_{i.}})^2$| N-a | SSE/(N-a)
+Total (corrected) | $\sum_{i}n_i(\bar{Y_{i.}}-\bar{Y_{..}})^2$ | N-1 | 
+
+Linear Model Explanation of ANOVA
+
+**Cell means model**
+
+$Y_{ij}=\mu_i+\epsilon_{ij}$
+
+where  
+ * $Y_{ij}$ response variable in j-th subject for the i-th treatment  
+ * $\mu_i$: parameters (fixed) representing the unknown population mean for the i-th treatment  
+ * $\epsilon_{ij}$ independent $N(0,\sigma^2)$ errors  
+ 
+ * $E(Y_{ij})=\mu_i$ $var(Y_{ij})=var(\epsilon_{ij})=\sigma^2$  
+ * All observations have the same variance
+ 
+ 
+Example:
+
+a = 3 (3 treatments) $n_1=n_2=n_3=2$
+
+
+
+
+
+
+
+
+
+
+
+
+
+#### Two Factor Fixed Effect ANOVA
+##### Balanced
+
