--- a/09-bookdown_cheat_sheet.Rmd
+++ b/09-bookdown_cheat_sheet.Rmd
@@ -14,6 +14,191 @@ The bookdown book: <https://bookdown.org/yihui/bookdown/>
 
 ## Math Expresssion/ Syntax
 
+Aligning equations
+
+```{r eval=FALSE}
+\begin{align*}
+a & = b \\
+X &\sim {\sf Norm}(10, 3) \\
+5 & \le 10
+\end{align*}
+```
+
+
+
+\begin{align*}
+a & = b \\
+X &\sim {\sf Norm}(10, 3) \\
+5 & \le 10
+\end{align*}
+
+Syntax | Notation
+---|---
+**Math** | 
+`$\pm$`|$\pm$
+`$\ge$`|$\ge$
+`$\le$`|$\le$
+`$\neq$`|$\neq$
+`$^\circ$`|$^\circ$
+`$\sum_{n=1}^{10} n^2$`|$\sum_{n=1}^{10} n^2$
+`$$\sum_{n=1}^{10} n^2$$`|$$\sum_{n=1}^{10} n^2$$
+`$x^{n}$`|$x^{n}$
+`$x_{n}$`|$x_{n}$
+`$\overline{x}$`|$\overline{x}$
+`$\hat{x}$`|$\hat{x}$
+`$\tilde{x}$`|$\tilde{x}$
+`$\frac{a}{b}$`|$\frac{a}{b}$ 
+`$\frac{a}{b}$`|$\frac{a}{b}$
+`$\displaystyle \frac{a}{b}$`|$\displaystyle \frac{a}{b}$
+`$\binom{n}{k}$`|$\binom{n}{k}$
+`$x_{1} + x_{2} + \cdots + x_{n}$`|$x_{1} + x_{2} + \cdots + x_{n}$
+`$x_{1}, x_{2}, \dots, x_{n}$`|$x_{1}, x_{2}, \dots, x_{n}$
+`\mathbf{x} = \langle x_{1}, x_{2}, \dots, x_{n}\rangle$`|\mathbf{x} = \langle x_{1}, x_{2}, \dots, x_{n}\rangle$
+`$x \in A$`|$x \in A$
+`$|A|$`|$|A|$
+`$x \in A$`|$x \in A$
+`$x \subset B$`|$x \subset B$
+`$x \subseteq B$`|$x \subseteq B$
+`$A \cup B$`|$A \cup B$
+`$A \cap B$`|$A \cap B$
+`$X \sim {\sf Binom}(n, \pi)$`|$X \sim {\sf Binom}(n, \pi)$
+`$\mathrm{P}(X \le x) = {\tt pbinom}(x, n, \pi)$`|$\mathrm{P}(X \le x) = {\tt pbinom}(x, n, \pi)$
+`$P(A \mid B)$`|$P(A \mid B)$
+`$\mathrm{P}(A \mid B)$`|$\mathrm{P}(A \mid B)$
+`$\{1, 2, 3\}$`|$\{1, 2, 3\}$
+`$\sin(x)$`|$\sin(x)$
+`$\log(x)$`|$\log(x)$
+`$\int_{a}^{b}$`|$\int_{a}^{b}$
+`$\left(\int_{a}^{b} f(x) \; dx\right)$`|$\left(\int_{a}^{b} f(x) \; dx\right)$
+`$\left[\int_{\-infty}^{\infty} f(x) \; dx\right]$`|$\left[\int_{-\infty}^{\infty} f(x) \; dx\right]$
+`$\left. F(x) \right|_{a}^{b}$`|$\left. F(x) \right|_{a}^{b}$
+`$\sum_{x = a}^{b} f(x)$`|$\sum_{x = a}^{b} f(x)$
+`$\prod_{x = a}^{b} f(x)$`|$\prod_{x = a}^{b} f(x)$
+`$\lim_{x \to \infty} f(x)$`|$\lim_{x \to \infty} f(x)$
+`$\displaystyle \lim_{x \to \infty} f(x)$`|$\displaystyle \lim_{x \to \infty} f(x)$
+**Greek Letters** | 
+`$\alpha A$`|$\alpha A$
+`$\beta B$`|$\beta B$
+`$\gamma \Gamma$`|$\gamma \Gamma$ 
+`$\delta \Delta$`|$\delta \Delta$ 
+`$\epsilon \varepsilon E$`|$\epsilon \varepsilon E$
+`$\zeta Z \sigma \,\!$`|$\zeta Z \sigma \,\!$
+`$\eta H$`|$\eta H$
+`$\theta \vartheta \Theta$`|$\theta \vartheta \Theta$
+`$\iota I$`|$\iota I$
+`$\kappa K$`|$\kappa K$
+`$\lambda \Lambda$`|$\lambda \Lambda$
+`$\mu M$`|$\mu M$
+`$\nu N$`|$\nu N$
+`$\xi\Xi$`|$\xi\Xi$
+`$o O$`|$o O$
+`$\pi \Pi$`|$\pi \Pi$
+`$\rho\varrho P$`|$\rho\varrho P$
+`$\sigma \Sigma$`|$\sigma \Sigma$
+`$\tau T$`|$\tau T$
+`$\upsilon \Upsilon$`|$\upsilon \Upsilon$
+`$\phi \varphi \Phi$`|$\phi \varphi \Phi$
+`$\chi X$`|$\chi X$
+`$\psi \Psi$`|$\psi \Psi$
+`$\omega \Omega$`|$\omega \Omega$
+
+
+Matrices
+```{r eval = FALSE}
+$$\begin{array}
+{rrr}
+1 & 2 & 3 \\
+4 & 5 & 6 \\
+7 & 8 & 9
+\end{array}
+$$
+```
+
+$$\begin{array}
+{rrr}
+1 & 2 & 3 \\
+4 & 5 & 6 \\
+7 & 8 & 9
+\end{array}
+$$
+
+
+```{r eval=FALSE}
+$$\mathbf{X} = \left[\begin{array}
+{rrr}
+1 & 2 & 3 \\
+4 & 5 & 6 \\
+7 & 8 & 9
+\end{array}\right]
+$$
+```
+$$\mathbf{X} = \left[\begin{array}
+{rrr}
+1 & 2 & 3 \\
+4 & 5 & 6 \\
+7 & 8 & 9
+\end{array}\right]
+$$
+
+Define `\mx` to be `\mathbf`
+`$$\newcommand{\mx}[1]{\mathbf{#1}}$$`
+$$\newcommand{\mx}[1]{\mathbf{#1}}$$
+
+
+
+$$\mx{y} = \mx{X\beta}$$
+
+Aligning Equations
+
+```{r eval=FALSE}
+$$ 
+%% Comment -- define some macros
+\def\Xbar{\overline{X}_\bullet}
+\def\sumn{\sum_{i=1}^{n}}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{align}
+\sumn \left(X_i - \Xbar\right) &= \sumn X_i - \sumn \Xbar \\
+                              &= \sumn X_i - n \Xbar \\
+                              &= \sumn X_i - \sumn X_i \\
+                              &= 0
+\end{align}
+$$
+```
+
+
+$$ 
+%% Comment -- define some macros
+\def\Xbar{\overline{X}_\bullet}
+\def\sumn{\sum_{i=1}^{n}}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{align}
+\sumn \left(X_i - \Xbar\right) &= \sumn X_i - \sumn \Xbar \\
+                              &= \sumn X_i - n \Xbar \\
+                              &= \sumn X_i - \sumn X_i \\
+                              &= 0
+\end{align}
+$$
+
+Aligning Equations with Comments
+
+```{r eval=FALSE}
+$$
+\begin{align}
+    3+x &=4 && \text{(Solve for} x \text{.)}\\
+    x &=4-3 && \text{(Subtract 3 from both sides.)}\\
+    x &=1   && \text{(Yielding the solution.)}
+\end{align}
+$$
+```
+
+$$
+\begin{align}
+    3+x &=4 && \text{(Solve for} x \text{.)}\\
+    x &=4-3 && \text{(Subtract 3 from both sides.)}\\
+    x &=1   && \text{(Yielding the solution.)}
+\end{align}
+$$
+
 
 ## Heading blah blah
 
