--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -9,12 +9,14 @@ It's all fun and exciting when I learned these new tools. But I have to admit th
 
 <br>
 **Some general recommendation**:  
- * The more you practice, more line of codes that you write, more function that you memorize, I think the more you will like this journey.  
+
+ * The more you practice, more line of codes that you write, more function that you memorize, I think the more you will like this journey.    
  * Readers can follow this book several ways:  
-        + If you are interested in particular methods/tools, you can jump to that section by clicking the section name.
-        + If you want to follow a traditional path of data analysis, read the [Regression Analysis] section.
-        + If you want to explore new and upcoming method, read the [Advanced Method] section.
-        + If you want to create your experiment and test your hypothesis, read the [Experimental Design] section.
+    
+    + If you are interested in particular methods/tools, you can jump to that section by clicking the section name.  
+    + If you want to follow a traditional path of data analysis, read the [Regression Analysis] section.  
+    + If you want to explore new and upcoming method, read the [Advanced Methods] section.  
+    + If you want to create your experiment and test your hypothesis, read the [Experimental Design] section.  
         
  * If you don't understand a part, search the title of that part of that part on Google, and read more into that subject. This is just a general guide. 
  * If you want to customize your code beyond the ones provided in this book, run in the console `help(code)` or `?code`. For example, I want more information on `hist` function, I'll type in the console `?hist` or `help(hist)`.  
