--- a/04-ANOVA.Rmd
+++ b/04-ANOVA.Rmd
@@ -111,7 +111,7 @@ Total (corrected) | $\sum_{i}n_i(\bar{Y_{i.}}-\bar{Y_{..}})^2$ | N-1 |
 
 Linear Model Explanation of ANOVA
 
-**Cell means model**
+##### Cell means model
 
 $Y_{ij}=\mu_i+\epsilon_{ij}$
 
@@ -129,12 +129,309 @@ Example:
 a = 3 (3 treatments) $n_1=n_2=n_3=2$
 
 
+$$
+\begin{align*}
+\left(\begin{array}{c} 
+Y_{11}\\
+Y_{12}\\
+Y_{21}\\
+Y_{22}\\
+Y_{31}\\
+Y_{32}\\
+\end{array}\right) &= 
+\left(\begin{array}{ccc} 
+1 & 0 & 0 \\ 
+1 & 0 & 0 \\ 
+0 & 1 & 0 \\ 
+0 & 1 & 0 \\ 
+0 & 0 & 1 \\ 
+0 & 0 & 1 \\ 
+\end{array}\right)
+\left(\begin{array}{c}
+\mu_1 \\
+\mu_2 \\
+\mu_3 \\
+\end{array}\right) + \left(\begin{array}{c}
+\epsilon_{11} \\
+\epsilon_{12} \\
+\epsilon_{21} \\
+\epsilon_{22} \\
+\epsilon_{31} \\
+\epsilon_{32} \\
+\end{array}\right)\\
+\mathbf{y} &= \mathbf{X\beta} +\mathbf{\epsilon}
+\end{align*}
+$$
+$X_{k,ij}=1$ if the k-th treatment is used  
+
+$X_{k,ij}=0$ Otherwise
+
+Note: no intercept term. 
+
+$$
+\begin{align}
+\mathbf{b}= \left[\begin{array}{c}
+\mu_1 \\
+\mu_2 \\
+\mu_3 \\
+\end{array}\right] &= 
+(\mathbf{x}'\mathbf{x})^{-1}\mathbf{x}'\mathbf{y} \\
+
+& = 
+\left[\begin{array}{ccc}
+n_1 & 0 & 0\\
+0 & n_2 & 0\\
+0 & 0 & n_3 \\
+\end{array}\right]^{-1}
+\left[\begin{array}{c}
+Y_1\\
+Y_2\\
+Y_3\\
+\end{array}\right] \\
+
+& = 
+\left[\begin{array}{c}
+\bar{Y_1}\\
+\bar{Y_2}\\
+\bar{Y_3}\\
+\end{array}\right]
+\end{align} (\#eq:beta_origin)
+$$
+
+is the BLUE (best linear unbiased estimator) for $\beta=[\mu_1 \mu_2\mu_3]'$ 
+
+$$E(\mathbf{b})=\beta$$
+
+$$
+var(\mathbf{b})=\sigma^2(\mathbf{X'X})^{-1}=\sigma^2
+\left[\begin{array}{ccc}
+1/n_1 & 0 & 0\\
+0 & 1/n_2 & 0\\
+0 & 0 & 1/n_3\\
+\end{array}\right]
+$$
+
+$var(b_i)=var(\hat{\mu_i})=\sigma^2/n_i$  where $\mathbf{b} \sim N(\beta,\sigma^2(\mathbf{X'X})^{-1})$
+
+$$
+\begin{align*}
+MSE &= \frac{1}{N-a} \sum_{i}\sum_{j}(Y_{ij}-\bar{Y_{i.}})^2 \\
+    &= \frac{1}{N-a} \sum_{i}[(n_i-1)\frac{\sum_{i}(Y_{ij}-\bar{Y_{i.}})^2}{n_i-1}] \\
+    &= \frac{1}{N-a} \sum_{i}(n_i-1)s_1^2
+\end{align*}
+$$
+
+We have $E(s_i^2)=\sigma^2$
+$E(MSE)=\frac{1}{N-a}\sum_{i}(n_i-1)\sigma^2=\sigma^2$  
+
+Hence, MSE is an unbiased estimator of $\sigma^2$, regardless of whether the treatment means are equal or not.
+
+$E(MSTR)=\sigma^2+\frac{\sum_{i}n_i(\mu_i-\mu_.)^2}{a-1}$
+where 
+$\mu_.=\frac{\sum_{i=1}^{a}n_i\mu_i}{\sum_{i=1}^{a}n_i}$
+If all treatment means are equals (=$\mu_.$), $E(MSTR)=\sigma^2$.
+
+Then we can use an F-test for teh equality of all treatment means: 
+$$H_0:\mu_1=\mu_2=..=\mu_a$$
+
+
+$$H_a: not~al l~ \mu_i ~ are ~ equal $$
+
+$F=\frac{MSTR}{MSE}$
+where large values of F support $H_a$ (since MSTR will tend to exceed MSE when $H_a$ holds)
+and F near 1 support $H_0$ (upper tail test)
+
+**Equivalently**, when $H_0$ is true, $F \sim f_{(a-1,N-a)}$  
+
+ * If $F \leq f_{(a-1,N-a;1-\alpha)}$, we cannot reject $H_0$  
+ * If $F \geq f_{(a-1,N-a;1-\alpha)}$, we reject $H_0$  
+
+ Note: If a = 2 (2 treatments), F-test = two sample t-test
+ 
+<br>
+
+##### Treatment Effects (Factor Effects)
+Besides Cell means model, we have another way to formalize  one-way ANOVA: 
+$$Y_{ij} = \mu + \tau_i + \epsilon_{ij}$$
+where  
+
+ * $Y_{ij}$ is the j-th response for the i-th treatment  
+ * $\tau_i$ i-th treatment effect  
+ * $\mu$ constant component, common to all observations  
+ * $\epsilon_{ij}$ independent random errors ~ $N(0,\sigma^2)$  
 
 
 
+For example, a = 3, $n_1=n_2=n_3=2$
+$$
+\begin{align}
+\left(\begin{array}{c} 
+Y_{11}\\
+Y_{12}\\
+Y_{21}\\
+Y_{22}\\
+Y_{31}\\
+Y_{32}\\
+\end{array}\right) &= 
+\left(\begin{array}{cccc} 
+1 & 1 & 0 & 0 \\ 
+1 & 1 & 0 & 0 \\ 
+1 & 0 & 1 & 0 \\ 
+1 & 0 & 1 & 0 \\ 
+1 & 0 & 0 & 1 \\ 
+1 & 0 & 0 & 1 \\ 
+\end{array}\right)
+\left(\begin{array}{c}
+\mu \\
+\tau_1 \\
+\tau_2 \\
+\tau_3\\
+\end{array}\right) + \left(\begin{array}{c}
+\epsilon_{11} \\
+\epsilon_{12} \\
+\epsilon_{21} \\
+\epsilon_{22} \\
+\epsilon_{31} \\
+\epsilon_{32} \\
+\end{array}\right)\\
+\mathbf{y} &= \mathbf{X\beta} +\mathbf{\epsilon} (\#eq:unsolvable)
+\end{align}
+$$
+
+However, 
 
 
+$$
+\mathbf{X'X} = \left(\begin{array}{cccc}
+\sum_{i}n_i & n_1 & n_2 & n_3 \\
+n_1 & n_1 & 0 & 0 \\
+n_2 & 0 & n_2 & 0 \\
+n_3 & 0 & 0 & n_3 \\
+\end{array}\right)
+$$
 
+is **singular** thus does not exist, $\mathbf{b}$ is insolvable (infinite solutions)
+Hence, we have to impose restrictions on the parameters to a model matrix $\mathbf{X}$ of full rank.
+
+Whatever restriction we use, we still have: 
+$E(Y_{ij})=\mu + \tau_i = \mu_i = mean ~ response ~ for ~ i-th ~ treatment$
+
+###### Restriction on sum of tau
+
+$\sum_{i=1}^{a}\tau_i=0$ 
+
+implies 
+
+$$
+\mu= \mu +\frac{1}{a}\sum_{i=1}^{a}(\mu+\tau_i)
+$$
+is the average of the treatment mean (grand mean) (overall mean) 
+
+$$
+\begin{align*}
+\tau_i  &=(\mu+\tau_i) -\mu = \mu_i-\mu \\
+        &= (treatment ~ mean) -(grand~mean) \\
+        &= treatment ~ effect
+\end{align*}
+$$
+$$
+\tau_a=-\tau_1-\tau_2-...-\tau_{a-1}
+$$
+Hence, the mean for the a-th treatment is 
+$$
+\mu_a=\mu+\tau_a=\mu-\tau_1-\tau_2-...-\tau_{a-1}
+$$
+
+Hence, the model need only "a" parameters:
+$$
+\mu,\tau_1,\tau_2,..,\tau_{a-1}
+$$
+
+
+Equation \@ref(eq:unsolvable) becomes
+
+
+$$
+\begin{align*}
+\left(\begin{array}{c} 
+Y_{11}\\
+Y_{12}\\
+Y_{21}\\
+Y_{22}\\
+Y_{31}\\
+Y_{32}\\
+\end{array}\right) &= 
+\left(\begin{array}{cccc} 
+1 & 1 & 0 \\ 
+1 & 1 & 0 \\ 
+1 & 0 & 1 \\ 
+1 & 0 & 1 \\ 
+1 & -1 & -1 \\ 
+1 & -1 & -1 \\ 
+\end{array}\right)
+\left(\begin{array}{c}
+\mu \\
+\tau_1 \\
+\tau_2 \\
+\end{array}\right) + \left(\begin{array}{c}
+\epsilon_{11} \\
+\epsilon_{12} \\
+\epsilon_{21} \\
+\epsilon_{22} \\
+\epsilon_{31} \\
+\epsilon_{32} \\
+\end{array}\right)\\
+\mathbf{y} &= \mathbf{X\beta} +\mathbf{\epsilon}
+
+\end{align*}
+$$
+
+where $\beta\equiv[\mu,\tau_1,\tau_2]'$
+
+
+Equation \@ref(eq:beta_origin) with $\sum_{i}\tau_i=0$ becomes
+
+$$
+\begin{align}
+\mathbf{b}= \left[\begin{array}{c}
+\hat{\mu} \\
+\hat{\tau_1} \\
+\hat{\tau_2} \\
+\end{array}\right] &= 
+(\mathbf{x}'\mathbf{x})^{-1}\mathbf{x}'\mathbf{y} \\
+
+& = 
+\left[\begin{array}{ccc}
+\sum_{i}n_i & n_1-n_3 & n_2-n_3\\
+n_1-n_3 & n_1+n_3 & n_3\\
+n_2-n_3 & n_3 & n_2-n_3 \\
+\end{array}\right]^{-1}
+\left[\begin{array}{c}
+Y_{..}\\
+Y_{1.}-Y_{3.}\\
+Y_{2.}-Y_{3.}\\
+\end{array}\right] \\
+
+& =
+\left[\begin{array}{c}
+\frac{1}{3}\sum_{i=1}^{3}\bar{Y_{i.}}\\
+\bar{Y_{1.}}-\frac{1}{3}\sum_{i=1}^{3}\bar{Y_{i.}}\\
+\bar{Y_{2.}}-\frac{1}{3}\sum_{i=1}^{3}\bar{Y_{i.}}\\
+\end{array}\right]\\
+
+& = 
+\left[\begin{array}{c}
+\hat{\mu}\\
+\hat{\tau_1}\\
+\hat{\tau_2}\\
+\end{array}\right]
+\end{align}
+$$
+
+and $\hat{\tau_3}=-\hat{\tau_1}-\hat{\tau_2}=\bar{Y_3}-\frac{1}{3} \sum_{i}\bar{Y_{i.}}$
+
+
+In R, `lm()` uses the restriction $\tau_1=0$
 
 
 
