--- a/09-bookdown_cheat_sheet.Rmd
+++ b/09-bookdown_cheat_sheet.Rmd
@@ -14,6 +14,8 @@ The bookdown book: <https://bookdown.org/yihui/bookdown/>
 
 ## Math Expresssion/ Syntax
 
+[Full list](http://tug.ctan.org/info/symbols/comprehensive/symbols-a4.pdf)
+
 Aligning equations
 
 ```{r eval=FALSE}
@@ -39,7 +41,20 @@ Syntax | Notation
 `$\ge$`|$\ge$
 `$\le$`|$\le$
 `$\neq$`|$\neq$
+`$\equiv$`|$\equiv$
 `$^\circ$`|$^\circ$
+`$\times$`|$\times$
+`$\cdot$`|$\cdot$
+`$\leq$`|$\leq$
+`$\geq$`|$\geq$
+`$\subset$`|$\subset$
+`$\subseteq$`|$\subseteq$
+`$\leftarrow$`|$\leftarrow$
+`$\rightarrow$`|$\rightarrow$
+`$\Leftarrow$`|$\Leftarrow$
+`$\Rightarrow$`|$\Rightarrow$
+`$\approx$`|$\approx$
+`$\mathbb{R}$`|$\mathbb{R}$
 `$\sum_{n=1}^{10} n^2$`|$\sum_{n=1}^{10} n^2$
 `$$\sum_{n=1}^{10} n^2$$`|$$\sum_{n=1}^{10} n^2$$
 `$x^{n}$`|$x^{n}$
@@ -53,7 +68,7 @@ Syntax | Notation
 `$\binom{n}{k}$`|$\binom{n}{k}$
 `$x_{1} + x_{2} + \cdots + x_{n}$`|$x_{1} + x_{2} + \cdots + x_{n}$
 `$x_{1}, x_{2}, \dots, x_{n}$`|$x_{1}, x_{2}, \dots, x_{n}$
-`\mathbf{x} = \langle x_{1}, x_{2}, \dots, x_{n}\rangle$`|\mathbf{x} = \langle x_{1}, x_{2}, \dots, x_{n}\rangle$
+`\mathbf{x} = \langle x_{1}, x_{2}, \dots, x_{n}\rangle$`|$\mathbf{x} = \langle x_{1}, x_{2}, \dots, x_{n}\rangle$
 `$x \in A$`|$x \in A$
 `$|A|$`|$|A|$
 `$x \in A$`|$x \in A$
@@ -198,6 +213,45 @@ $$
     x &=1   && \text{(Yielding the solution.)}
 \end{align}
 $$
+
+
+### Statistics Notation
+```{r eval = FALSE}
+$$f(y|N,p) = \frac{N!}{y!(N-y)!}\cdot p^y \cdot (1-p)^{N-y} = {{N}\choose{y}} \cdot p^y \cdot (1-p)^{N-y}$$
+```
+$$f(y|N,p) = \frac{N!}{y!(N-y)!}\cdot p^y \cdot (1-p)^{N-y} = {{N}\choose{y}} \cdot p^y \cdot (1-p)^{N-y}$$
+
+
+
+## Table
+```{r eval = FALSE}
++---------------+---------------+--------------------+
+| Fruit         | Price         | Advantages         |
++===============+===============+====================+
+| *Bananas*     | $1.34         | - built-in wrapper |
+|               |               | - bright color     |
++---------------+---------------+--------------------+
+| Oranges       | $2.10         | - cures scurvy     |
+|               |               | - **tasty**        |
++---------------+---------------+--------------------+
+```
+
++---------------+---------------+--------------------+
+| Fruit         | Price         | Advantages         |
++===============+===============+====================+
+| *Bananas*     | $1.34         | - built-in wrapper |
+|               |               | - bright color     |
++---------------+---------------+--------------------+
+| Oranges       | $2.10         | - cures scurvy     |
+|               |               | - **tasty**        |
++---------------+---------------+--------------------+
+
+
+```{r eval=FALSE}
+(\mathbf{x}^T\mathbf{x})^{-1}\mathbf{x}^T\mathbf{y}
+
+```
+$(\mathbf{x}^T\mathbf{x})^{-1}\mathbf{x}^T\mathbf{y}$
 
 
 ## Heading blah blah
