--- a/index.Rmd
+++ b/index.Rmd
@@ -9,6 +9,7 @@ bibliography: [book.bib, packages.bib,references.bib]
 biblio-style: apalike
 link-citations: yes
 description: "This is a guide on how to conduct a data analysis routine"
-
+github-repo: "mikenguyen13/data_analysis"
+cover-image: "images/cover.jpg"
 ---
-
+# Index
